src/test/deca/syntax/valid/expr/test_expr_unary_exclam.deca
// Description:
//    test de programme syntaxiquement correct
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = -1;
    if(!a){
        print("a est nul");
    }
    else{
        print("a est non nul");
    }
        
}
