src/test/deca/syntax/invalid/expr/test_expr_readfloat_without_par.deca
// Description:
//    tests de programme syntaxiquement incorrects : pas de parenthese
//
// Resultats:
//    Ligne 12: mismatched input ';' expecting '('
//    
//
// Historique:
//    cree le 01/01/2024

{
    float a = readFloat;
}

